--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -2,6 +2,7 @@
     width: 280px;
     margin-bottom: 30px;
     box-shadow: 8px 8px 16px rgb(0 0 0 / 40%);
+    position: relative;
 }
 
 .colaborador img {
@@ -34,7 +35,16 @@
     padding: 0 16px;
 }
 
-.link-imagem
-{
+.link-imagem {
     text-decoration:none;
+}
+
+.deletar {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+}
+
+.favoritar {
+    margin-top: 20px;
 }
