--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,22 +1,19 @@
-.formulario 
-{
+.formulario-container {
     display: flex;
+    gap: 20px; /** espaço entre os dois forms*/
+    flex-wrap: wrap; /** quebrar a linha quando chegar o limite da tela*/
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px 50px;
+
 }
-
-
-.formulario form
-{
-    max-width: 80%;
-    background-color: #F2F2F2;
+.formulario-container .formulario {
+    background: #F7F7F7;
+    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.233);
     border-radius: 20px;
+    flex: 1; /** divide a tela em 50% (pq possui dois forms)*/
     padding: 36px 64px;
-    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.6);
 }
-
-.fa-address-card
-{
-    font-size: larger;
-    margin-right: 10px;
+.formulario-container .formulario h2 {
+    font-weight: 400;
+    font-size: 32px;
 }
